travel.css
/* ... */
.login-form-container form .box{
    width: 100%;
    padding: 1rem;
    font-size: 1.7rem;
    color: #333;
    margin: .6rem 0;
    border: .1rem solid rgba(0, 0,0,.3);
    text-transform: none;
}

.login-form-container form .box:focus{
    border-color: var(--orange);
}

.login-form-container form #remember{
    margin: 2rem 0;
}

.login-form-container form label{
    font-size: 1.5rem;
}

.login-form-container form .btn{
    display: block;
    width: 100%;  
}

.login-form-container form p{
    padding: .5rem 0;
    font-size: 1.5rem;
    color: #666;
}

.login-form-container form p a{
    color: var(--orange);
}

.login-form-container form p a:hover{
    color: #333;
    text-decoration: underline;
}

.login-form-container #form-close{
    position: absolute;
    top: 2rem;
    right: 3rem;
    font-size: 5rem;
    color: #fff;
    cursor: pointer;
}

/* Login End */


#menu-bar{
    color: #fff;
    border: .1rem solid #fff;
    border-radius: .5rem;
    font-size: 3rem;
    padding: .5rem 1.2rem;
    cursor: pointer;
    display: none;

}

/* Home Start */

.home{
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-flow: column;
    position: relative;

}

.home .content{
    text-align: center;
}

.home .content h3{
    font-size: 4.5rem;
    color: #fff;
    text-transform: uppercase;
    text-shadow: 0 .3rem .5rem rgba(0, 0,0,.7);
}

.home .content p{
    font-size: 2.5rem;
    color: #fff;
    padding: .5rem 0;
    text-shadow: 0 .3rem .5rem rgba(0, 0,0,.5);

}



.home .video-container video{
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.home .controls{
    padding: 1rem;
    border-radius: 5rem;
    background: rgba(0, 0,0,.7);
    position: relative;
    top: 10rem;
}

.home .controls .vid-btn{
    height: 2rem;
    width: 2rem;
    display: inline-block;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
    margin: 0 .5rem;
}

.home .controls  .vid-btn.active{
    background: var(--orange);
}

/* Home End */


/* Booking Start */

.book .row{
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    align-items: center;
}

.book .row .image{
    flex: 1 1 40rem;
}

.book .row .image img{
    width: 100%;
}

.book .row form{
    flex: 1 1 40rem;
    padding: 2rem;
    box-shadow: 0 1rem 2rem rgba(0, 0,0,.1);
    border-radius: .5rem;
}

.book .row form .inputBox{
    padding: .5rem 0;
}

.book .row form .inputBox input{
    width: 100%;
    padding: 1rem;
    border: .1rem solid rgba(0, 0,0,.1);
    font-size: 1.7rem;
    color: #333;
    text-transform: none;
}
.book .row form .inputBox h3{
    font-size: 2rem;
    padding: 1rem 0;
    color: #666;
}

/* Booking End */


/* Package Start */

.packages .box-container{
    display: flex;
    flex-flow: wrap;
    gap: 2rem;
}

.packages .box-container .box{
    flex: 1 1 30rem;
    border-radius: .5rem;
    overflow: hidden;
    box-shadow: 0 1rem 2rem rgba(0, 0,0,.1);
}

.packages .box-container .box img{
    height: 25rem;
    width: 100%;
    object-fit: cover;
}

.packages .box-container .box .content{
    padding: 2rem;
}

.packages .box-container .box .content h3{
    font-size: 2rem;
    color: #333;
}

.packages .box-container .box .content h3 i{
    color: var(--orange);
}

.packages .box-container .box .content p{
    font-size: 1.7rem;
    color: #666;
    padding: 1rem 0;
}

.packages .box-container .box .content .stars i{
    font-size: 1.7rem;
    color: var(--orange);
}

.packages .box-container .box .content .price{
    font-size: 2rem;
    color: #333;
    padding-top: .5rem;
}

.packages .box-container .box .content .price span{
    color: #666;
    font-size: 1.5rem;
    text-decoration: line-through;
}

/* Package End */

/* Services Start */

.services .box-container{
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.services .box-container .box{
    flex: 1 1 30rem;
    border-radius: .5rem;
    padding: 1rem;
    text-align: center;
}

.services .box-container .box i{
    padding: 1rem;
    font-size: 5rem;
    color: var(--orange);
}

.services .box-container .box h3{
    font-size: 2.5rem;
    color:#333;
}

.services .box-container .box p{
    font-size: 1.5rem;
    color:#666;
    padding: 1rem 0;
}

.services .box-container .box:hover{
    box-shadow: 0 1rem 2rem rgba(0, 0,0,.1);
}

/* Services End */

/* Gallery Start */

.gallery .box-container{
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
}

.gallery .box-container .box{
    overflow: hidden;
    box-shadow: 0 1rem 2rem rgba(0, 0,0,.1);
    border: 1rem solid #fff;
    border-radius: .5rem;
    flex: 1 1 30rem;
    height: 25rem;
    position: relative;
}

.gallery .box-container .box img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.gallery .box-container .box .content{
    position: absolute;
    top: -100%;
    left: 0;
    height: 100%;
    width: 100%;
    text-align: center;
    background: rgba(0, 0,0,.7);
    padding: 2rem;
    padding-top: 5rem;
}

.gallery .box-container .box:hover .content{
    top: 0;
}

.gallery .box-container .box .content h3{
    font-size: 2.5rem;
    color: var(--orange);
}

.gallery .box-container .box .content p{
    font-size: 1.5rem;
    color: #eee;
    padding: .5rem 0;
}

/* Gallery End */

/* Review Start */

.review .review-slider{
    padding-bottom: 2rem;
}
.review .box{
    padding: 1rem;
    text-align: center;
    box-shadow: 0 1rem 2rem rgba(0, 0,0,.1);
    border-radius: .5rem;

}

.review .box img{
    height: 13rem;
    width: 13rem;
    border-radius: 50%;
    object-fit: cover;
    margin-bottom: 1rem;
}

.review .box h3{
    color: #333;
    font-size: 2.5rem;
}

.review .box p{
    color: #666;
    font-size: 1.5rem;
    padding: 1rem 0;
}

.review .box .stars i{
    color: var(--orange);
    font-size: 1.7rem;
}
/* ... */

